samples/_failures_safe/1761072074_453b38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8e03544.c: In function ‘main’:
./samples/SAFE/__tmp_f8e03544.c:140:9: error: ‘destroy’ undeclared (first use in this function)
  140 |         destroy
      |         ^~~~~~~
./samples/SAFE/__tmp_f8e03544.c:140:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f8e03544.c:140:16: error: expected ‘;’ at end of input
  140 |         destroy
      |                ^
      |                ;
./samples/SAFE/__tmp_f8e03544.c:140:9: error: expected declaration or statement at end of input
  140 |         destroy
      |         ^~~~~~~
./samples/SAFE/__tmp_f8e03544.c:140:9: error: expected declaration or statement at end of input
